add registration-modal fles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 @import './components/header-common';
 @import './components/header-main';
 @import './components/header-lib';
+@import './components/registration-modal';
 @import './components/cardFilms';
 @import './components/footer';
 @import './components/pagination';
