add files modal registration

--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -19,6 +19,9 @@
                 <use class="icon-menu" href="/src/images/sprite.svg#icon-film"></use>
             </svg>
             <ul class="site-nav site-nav--main list">
+                <li class="auth-nav__item">
+                    <button class="auth-btn login__btn" type="button">Log in</button>
+                  </li>
                 <li class="site-nav__item site-nav__item--main"><a
                         class="site-nav__link site-nav__link--main site-nav__link--current link"
                         href="/src/index.html">Home</a></li>
