added files for adding film to library
1.added files for adding film from modal window to queue/watched.
2.changed one name in modal window.
3.added style for buttons(put it in my spinner file)

--- a/src/sass/components/_spinner.scss
+++ b/src/sass/components/_spinner.scss
@@ -27,3 +27,11 @@
         transform: rotate(360deg);
     }
 }
+
+.active {
+    background-color: #ff6b01;
+    border-color: #ff6b01;
+    color:  #fff;
+    transform: scale(1.05);
+}
+
