--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -22,10 +22,13 @@
                 <li class="auth-nav__item">
                     <button class="auth-btn login__btn" type="button">Log in</button>
                   </li>
+                  <!-- <li class="auth-nav__item">
+                    <button class="auth-btn logout__btn" type="button">Log out</button>
+                  </li> -->
                 <li class="site-nav__item site-nav__item--main"><a
                         class="site-nav__link site-nav__link--main site-nav__link--current link"
                         href="/src/index.html">Home</a></li>
-                <li class="site-nav__item site-nav__item--main"><a class="site-nav__link site-nav__link--main  link"
+                <li class="site-nav__item site-nav__item--main"><a id="library-link" class="site-nav__link site-nav__link--main  link"
                         href="/src/library.html">My Library</a></li>
             </ul>
         </nav>
