--- a/src/partials/registration-modal.html
+++ b/src/partials/registration-modal.html
@@ -41,10 +41,10 @@
 					</div>
 				</div> -->
 
-				<div class="form-check d-flex justify-content-center mb-5">
+				<div class="form-check position-check">
 					<input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
 					<label class="form-check-label" for="form2Example3">
-						I agree all statements in <a href="#!">Terms of service</a>
+						I agree all statements in <a class="term-asd" href="#!">Terms of service</a>
 					</label>
 				</div>
 
