--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -10,14 +10,15 @@
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.min.css">
+    
 </head>
 
-    <header class="container">
+    <header class="container--header">
         <nav>
-            <svg widht="20px" height="20px"  viewBox="0 0 100 100" aria-label="Logo">
-                <use class="icon-menu" href="/src/images/sprite.svg#icon-film"></use>
-            </svg>
+            <a class="logo link" href="./index.html">
+            <svg widht="27px" height="27px"  viewBox="0 0 100 100" aria-label="Logo" class="icon-logo">
+                <use href="/src/images/sprite.svg#icon-film"></use>
+            </svg><span class="logo--name">Filmoteka</span></a>
             <ul class="site-nav site-nav--main list">
                 <li class="site-nav__item site-nav__item--main"><a
                         class="site-nav__link site-nav__link--main site-nav__link--current link"
