--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,7 @@ summary {
   display: list-item;
 }
 
-.container {
+.container--header {
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
@@ -251,17 +251,17 @@ summary {
   overflow: hidden;
 }
 @media screen and (min-width: 320px) {
-  .container {
+  .container--header {
     width: 320px;
   }
 }
 @media screen and (min-width: 768px) {
-  .container {
+  .container--header {
     width: 768px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .container {
+  .container--header {
     width: 1280px;
   }
 }
@@ -287,6 +287,19 @@ header {
   background-position: center;
   background-size: cover;
 }
+@media screen and (min-width: 768px) {
+  header {
+    background-image: url(/src/images/header-tabl-1x.png);
+    background-repeat: no-repeat;
+    height: 216px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  header {
+    background-image: url(/src/images/header-desk-1x.png);
+    background-repeat: no-repeat;
+  }
+}
 
 nav {
   display: -webkit-box;
@@ -299,6 +312,32 @@ nav {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-top: 44px;
+}
+
+.logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo--name {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .logo--name {
+    display: inline-block;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.17;
+    text-align: center;
+    color: #FFFFFF;
+    margin-left: 10px;
+  }
 }
 
 .site-nav {
@@ -340,60 +379,161 @@ nav {
   margin-right: 0px;
 }
 
-input {
+.form-search__input {
   min-width: 280px;
-  border: 0.5px solid #FFFFFF;
-  margin-top: 60px;
+  background: none;
+  margin: 0;
+  border: none;
+  border-bottom: 0.5px solid #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .form-search__input {
+    min-width: 336px;
+  }
+}
+
+input::-webkit-input-placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: white;
+}
+
+input::-moz-placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: white;
+}
+
+input:-ms-input-placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: white;
+}
+
+input::-ms-input-placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: white;
+}
+
+input::placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: white;
+}
+
+.form-search__icon {
   position: relative;
+  margin-top: 60px;
+  max-width: 280px;
+}
+@media screen and (min-width: 768px) {
+  .form-search__icon {
+    max-width: 336px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-::-webkit-input-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  color: black;
-}
-
-::-moz-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  color: black;
-}
-
-:-ms-input-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  color: black;
-}
-
-::-ms-input-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  color: black;
-}
-
-::placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  color: black;
-}
-
-.icon-search {
+.form-search__icon_icon {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  bottom: 0;
+  cursor: pointer;
+  right: 0;
+}
+
+.gallery-container {
+  width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 60px 32px;
+}
+
+.movie-img {
+  display: block;
+  height: 574px;
+  border-radius: 5px;
+}
+
+.movie-link {
+  text-decoration: none;
+  max-width: 395px;
+  height: auto;
+  margin-right: 16px;
+  margin-bottom: 32px;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.movie-link:hover,
+.movie-link:focus {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+  outline: none;
+}
+
+.movie-link:nth-child(3n) {
+  margin-right: 0;
+}
+
+.movie-link:nth-child(2n) {
+  max-width: 394px;
+}
+
+.movie-link:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+
+.movie-title {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  margin-top: 12px;
+  margin-bottom: 0;
+  color: #000000;
+}
+
+.movie-info {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ff6b08;
 }
 
 p {
@@ -731,4 +871,49 @@ footer {
   height: 12px;
   padding: 8px 0 6px;
   vertical-align: top;
+}
+
+.spinner-box {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: transparent;
+}
+
+.none {
+  display: none;
+}
+
+.spinner-box__img {
+  -webkit-animation: spinner 3s linear infinite;
+          animation: spinner 3s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }/*# sourceMappingURL=main.css.map */
