--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -2,26 +2,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Library</title>
+    <title>Home</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.min.css">
+    
 </head>
 
-<header class="container">
+<header class="container--header">
     <nav>
-        <svg widht="20px" height="20px" viewBox="0 0 100 100" aria-label="Logo">
-            <use class="icon-menu" href="/src/images/sprite.svg#icon-film"></use>
-        </svg>
+        <a class="logo link" href="./index.html">
+            <svg widht="27px" height="27px" viewBox="0 0 100 100" aria-label="Logo" class="icon-logo">
+                <use href="/src/images/sprite.svg#icon-film"></use>
+            </svg><span class="logo--name">Filmoteka</span></a>
         <ul class="site-nav site-nav--main list">
             <li class="site-nav__item site-nav__item--main"><a
                     class="site-nav__link site-nav__link--main link"
                     href="/src/index.html">Home</a></li>
-            <li class="site-nav__item site-nav__item--main"><a class="site-nav__link site-nav__link--main site-nav__link--current link"
+            <li class="site-nav__item site-nav__item--main"><a class="site-nav__link site-nav__link--main  site-nav__link--current link"
                     href="/src/library.html">My Library</a></li>
         </ul>
     </nav>
