add id gallery cards

--- a/src/partials/card.html
+++ b/src/partials/card.html
@@ -1,5 +1,5 @@
 <main>
   <div class="gallery-container">
-    <ul class="gallery"></ul>
+    <ul class="gallery" id="gallery"></ul>
   </div>
 </main>
