--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -12,7 +12,7 @@
     
 </head>
 
-<header class="container--header">
+<header class="container--header header--library">
     <nav>
         <a class="logo link" href="./index.html">
             <svg widht="27px" height="27px" viewBox="0 0 100 100" aria-label="Logo" class="icon-logo">
