--- a/src/sass/components/_cardFilms.scss
+++ b/src/sass/components/_cardFilms.scss
@@ -1,129 +1,194 @@
+.gallery-container {
+  width: 100%;
+}
+
+.gallery {
+  padding: 20px 20px 40px 20px;
+  margin: 0;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: auto;
+    margin-left: auto;
+    gap: 32px;
+    padding: 60px 32px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+    gap: 0;
+  }
+}
+
+.gallery-item {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 280px;
+  list-style: none;
+  margin-bottom: 20px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    transform: scale(1.02);
+    outline: none;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    margin: 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+    margin-right: 16px;
+    margin-bottom: 32px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.movie-img {
+  display: block;
+  width: 280px;
+  height: 402px;
+  border-radius: 5px;
+
+  @media screen and (min-width: 768px) {
+    width: 336px;
+    height: 455px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 394px;
+    height: 574px;
+  }
+}
+
+.movie-link {
+  text-decoration: none;
+}
+
+.movie-title {
+  max-width: 280px;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 2px;
+  color: #000000;
+
+  @media screen and (min-width: 768px) {
+    line-height: 16px;
+    margin-top: 8px;
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 12px;
+  }
+}
+
+.movie-info {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  color: #ff6b08;
+
+  @media screen and (min-width: 768px) {
+    line-height: 16px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+// ------------------------------------------- //
+
 // .gallery-container {
-//   padding-top: 0;
-//   padding-bottom: 0;
+//   width: 1280px;
+//   margin-left: auto;
+//   margin-right: auto;
 // }
 
 // .gallery {
-//   padding: 20px 20px 40px 20px;
-
-//   @media screen and (min-width: 768px) {
-//     max-width: 768px;
-//     display: flex;
-//     flex-wrap: wrap;
-//   }
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin-top: 0;
+//   margin-bottom: 0;
+//   padding: 60px 32px;
 // }
 
 // .gallery-item {
+//   max-width: 395px;
 //   list-style: none;
-//   margin-bottom: 20px;
+//   margin-right: 16px;
+//   margin-bottom: 32px;
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// }
+
+// .gallery-item:hover,
+// .gallery-item:focus {
+//   transform: scale(1.02);
+//   outline: none;
+// }
+
+// .gallery-item:nth-child(3n) {
+//   margin-right: 0;
+// }
+
+// .gallery-item:nth-child(2n) {
+//   max-width: 394px;
+// }
+
+// .gallery-item:nth-last-child(-n + 3) {
+//   margin-bottom: 0;
 // }
 
 // .movie-img {
-//   width: 280px;
-//   height: 402px;
+//   display: block;
+//   width: 395px;
+//   height: 574px;
 //   border-radius: 5px;
 // }
 
 // .movie-link {
 //   text-decoration: none;
-//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
-
-// .movie-link:last-child {
-//   margin-bottom: 0;
-// }
-
-// .movie-link:hover,
-// .movie-link:focus {
-//   transform: scale(1.02);
-//   outline: none;
 // }
 
 // .movie-title {
 //   font-family: 'Roboto';
 //   font-weight: 500;
-//   font-size: 12px;
-//   line-height: 14px;
-//   text-transform: uppercase;
-//   margin-bottom: 2px;
+//   font-size: 20px;
+//   line-height: 24px;
+//   margin-top: 12px;
+//   margin-bottom: 0;
 //   color: #000000;
 // }
 
 // .movie-info {
 //   font-family: 'Roboto';
 //   font-weight: 500;
-//   font-size: 12px;
-//   line-height: 14px;
+//   font-size: 20px;
+//   line-height: 24px;
 //   color: #ff6b08;
 // }
-
-// ------------------------------------------- //
-
-.gallery-container {
-  width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 60px 32px;
-}
-
-.gallery-item {
-  max-width: 395px;
-  list-style: none;
-  margin-right: 16px;
-  margin-bottom: 32px;
-}
-
-.gallery-item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.gallery-item:nth-child(2n) {
-  max-width: 394px;
-}
-
-.gallery-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.movie-img {
-  display: block;
-  width: 395px;
-  height: 574px;
-  border-radius: 5px;
-}
-
-.movie-link {
-  text-decoration: none;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.movie-link:hover,
-.movie-link:focus {
-  transform: scale(1.02);
-  outline: none;
-}
-
-.movie-title {
-  font-family: 'Roboto';
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  margin-top: 12px;
-  margin-bottom: 0;
-  color: #000000;
-}
-
-.movie-info {
-  font-family: 'Roboto';
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: #ff6b08;
-}
