--- a/src/partials/films-library.html
+++ b/src/partials/films-library.html
@@ -1,6 +1,6 @@
 
 <main>
     <div class="gallery-container">
-        <ul class="gallery"></ul>
+        <ul class="gallery" id="library"></ul>
     </div>
 </main>
