--- a/src/partials/films-library.html
+++ b/src/partials/films-library.html
@@ -1,6 +1,8 @@
 
 <main>
     <div class="gallery-container">
-        <ul class="gallery"></ul>
+        <button id="watched">watched</button>
+        <button id="que">que</button>
+        <ul class="gallery" id="libGallery"></ul>
     </div>
 </main>
