reload-modal-reg

--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -20,10 +20,25 @@
                 <use href="/src/images/sprite.svg#icon-film"></use>
             </svg><span class="logo--name">Filmoteka</span></a>
             <ul class="site-nav site-nav--main list">
-                <li class="auth-nav__item">
+                 <li class="auth-nav__item">
+                   <li class="auth-nav__item">
+                    <button class="auth-btn login__btn" type="button">
+                        <img class="log-in" src="/src/images/log-in/log-in-8-32.png" alt="Log in" width="25" height="25" />
+                       
+                    </button>
+                  </li>
+                                
+                  </li class="auth-nav__item">
+                  <button class="auth-btn logout__btn" type="button">
+                      <img class="log-in" src="/src/images/log-in/log-out-20-16.png" alt="Log out" width="25" height="25" />
+                   
+                </button>
+                 
+                  </li>
+                <!-- <li class="auth-nav__item">
                     <button class="auth-btn login__btn" type="button">Log in</button>
                   </li>
-                  <!-- <li class="auth-nav__item">
+                  <li class="auth-nav__item">
                     <button class="auth-btn logout__btn" type="button">Log out</button>
                   </li> -->
                 <li class="site-nav__item site-nav__item--main"><a
