--- a/src/partials/registration-modal.html
+++ b/src/partials/registration-modal.html
@@ -1,8 +1,12 @@
 <div class="container__form invis h-100 ">
 	<div class="row">
 		<!-- <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1"> -->
-
-			<p class="text-center">Sign up</p>
+			<div class="log-img">
+				<!-- <img class="text-center" scr="/src/images/log-in/log-in-8-32.png"></img> -->
+			
+			<img src="/src/images/log-in/log-in-8-32.png" alt="log" width="50" height="50" />
+			<!-- <p class="text-center">sign up</p> -->
+		</div>
 			<div class="close__icon">
 				<i class="fa-solid fa-circle-xmark"></i>
 			</div>
@@ -50,8 +54,8 @@
 
 
 				<div class="button__container">
-					<button type="submit" class="btn btn-primary btn__signup">Sign Up</button>
-					<button type="submit" class="btn btn-primary btn__login">Log In</button>
+					<button type="submit" class="btn btn-primary btn__signup">sign Up</button>
+					<button type="submit" class="btn btn-primary btn__login">log In</button>
 				</div>
 			</form>
 
