--- a/src/sass/components/_registration-modal.scss
+++ b/src/sass/components/_registration-modal.scss
@@ -1,5 +1,36 @@
+.auth-btn{
+  display: inline-flex;
+  margin: 10px;
+  padding: 0;
+  border-radius: none;
+  border: solid 1px;
+  background-color: transparent;
+  &:hover{
+    color: #FF001B;
+  }
+  
+
+
+
+}
+
+.log-in {
+  filter: invert(1);
+  // color: #FF001B;
+  // padding: 5px;
+  &:hover{
+    color: #FF001B;
+  }
+}
+.log-img{
+  filter: invert(1);
+  text-align: center;
+  margin-bottom: 15px;
+
+}
 .term-asd {
     cursor: pointer;
+    color: #FF6B01;
     &:hover {
       text-decoration: underline;
     }
@@ -32,7 +63,8 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
-    background-color: #E5E5E5;
+    background-image: url(/src/images/header-mob-1x.jpg);
+    // background-color: #E5E5E5;
     transform: translate(-50%, -50%);
     transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
     display: block;
@@ -43,6 +75,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    filter: invert(1);
     transition: color 250ms ease;
     cursor: pointer;
   
@@ -94,6 +127,7 @@
   
   .fas {
     margin-right: 10px;
+    filter: invert(1);
     transition: color 250ms ease;
   }
   
@@ -110,8 +144,8 @@
   
       font-size: 12px;
       transform: translate(10%, -60%);
-      background-color: #ffffff;
-      color: #FF6B01;
+      // background-color: #ffffff;
+      color: #FF001B;
     }
     &:focus-within {
       border: #000000;
@@ -182,6 +216,7 @@
   
   .form-check-label {
     font-size: 15px;
+    color: #ffffff;
   }
   
   .btn {
@@ -221,7 +256,7 @@
   .accent {
     color: #FF6B01;
   }
-  // ================================================
+  
   @media (max-width: 768px) {
     .row {
       width: 550px;
@@ -246,7 +281,7 @@
       transform: translate(0%, 65%);
     }
     // .row {
-    //   background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp');
+    //   background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-bootstrap-registration/draw1.webp');
     //   background-size: contain;
     //   background-repeat: no-repeat;
     //   background-position: center;
