--- a/src/partials/up-btn.html
+++ b/src/partials/up-btn.html
@@ -1,6 +1,6 @@
 <div class="up-btn-wrapper visuallyhidden" data-up-btn>
     <svg class="up-btn__icon">
-      <use href="./images/sprite.svg#up"></use>
+      <use href="./images/sprite.svg#arrow-up-circle"></use>
     </svg>
   </div>
   
