--- a/src/sass/components/_up-btn.scss
+++ b/src/sass/components/_up-btn.scss
@@ -5,7 +5,7 @@
   
     z-index: 10;
   
-    color: tomato;
+    fill: #778899;
   
     cursor: pointer;
   
@@ -13,7 +13,7 @@
   
     &:hover,
     &:focus {
-      color: teal;
+      fill: #FF6B08;
     }
   
     @media screen and (min-width: 320px) {
