--- a/src/sass/components/_modalFilmCard.scss
+++ b/src/sass/components/_modalFilmCard.scss
@@ -82,17 +82,6 @@
   color: #8c8c8c;
   margin-bottom: 8px;
 }
-// .cardFilm__wrapper p {
-//   font-size: 12px;
-//   font-weight: 500;
-//line-height: 1.333;
-
-
-//   font-family: 'Roboto';
-//   line-height: 1.333;
-//   margin-bottom: 18px;
-//   letter-spacing: 1px;
-// }
 
 .title__wrapper{
   display: flex;
@@ -143,12 +132,7 @@
   font-size: 12px;
   line-height: 1.33;
 
-  // @media screen and (min-width: $mobile) and (max-width: 767px) {
-  //   margin-left: 70px;
-  // }
-  // @media screen and (min-width: $tablet) and (max-width: 1023px) {
-  //   margin-left: 46px;
-  // }
+
 }
 
 .cardFilm__genre {
@@ -244,11 +228,7 @@
   color:white;
 }
 
-// .cardItem__button:hover {
-//   background-color: rgb(255, 107, 8);
-//   color: rgb(255, 255, 255);
-//   border: 0;
-// }
+
 
 .cardItem__list {
   list-style: none;
@@ -270,23 +250,7 @@
     display: flex;
   }
 }
-  // .image {
-  //   display: block;
-  //   width: auto;
-  //   height: auto;
-  //   padding-top: 10px;
-  //   border-radius: 5px;
-  // }
 
-  // .cardItem { //?
-  //   display: flex;
-  // }
-
-  // .cardItem__list {
-  //   display: flex;
-  //   justify-content: space-between;     //?
-  //   padding: 0;
-  // }
 
   @media screen and (min-width: 768px) and (max-width: 1199px){
   .cardFilm__wrapper {
@@ -304,268 +268,28 @@
     margin: 40px 12px 40px 12px;
   }
 }
-  // .cardFilm__image {
-  //   width: 295px;
-  //   padding-left: 50px;
-  //   padding-bottom: 10px;
-  // }
 
-//   .cardFilm__name {
-//     font-size: 25px;
-//     line-height: 35px;
-//   }
-// }
+.modal-close-btn{
+  position: absolute;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  background-color: var(--background-second-color);
+  border: none;
+  box-sizing: border-box;
+  border-radius: 50%;
+  top: 8px;
+  right: 8px;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  background-color: white;
+  font-size: larger;
+}
+@media screen and (min-width: 1199px) {
+  .modal-close-btn {
+    top: 12px;
+  }
+}
+ 
 
-// .basicLightbox{
-//   height: 100%
-// }
-// @media (min-width: 1024px) {
-//   .modal-cardFilm {
-//     background-color: #ffffff;
-//     width: 810px;
-//     margin-top: 0px;
-//     display: flex;
-//   }
-// }
-  // .image {
-  //   display: block;
-  //   width: auto;
-  //   height: auto;
-  //   padding-top: 10px;
-  //   border-radius: 5px;
-  // }
-
-  // .cardFilm__wrapper {
-  //   width: 423px;
-  // }
-
-  // .cardItem__genreList {
-  //   width: 290px;
-  // }
-
-
-
-
-
-
-
-
-// @media screen and (max-width: 767px){
-// .modal-card {
-//     position: relative;
-//     background-color: #fff;
-//     width: 320px;
-//     margin-top: 350px;
-// }
-// }
-
-// .image {
-//   display: block;
-//   margin-right: auto;
-//   margin-left: auto;
-//   padding-top: 10px;
-//   width: 260px;
-//   height: 404px;
-//   border-radius: 5px;
-// }
-
-// @media screen and (min-width: 320px) and (max-width: 767px){
-// .image {
-//     width: 280px;
-//     height: 416px;
-// }
-// }
-
-
-
-// .basicLightbox__placeholder{
-//     position: fixed;
-// }
-
-// .modal-cardFilm{
-//   position: relative;
-//   background-color: #fff;
-//   width: 320px;
-//   margin-top: 350px;
-
-//     overflow: scroll;
-
-// }
-// //     @media screen and (max-width: 767px){
-// //     .modal-card {
-// //     position: relative;
-// //     background-color: #fff;
-// //     width: 320px;
-// //     margin-top: 350px;
-// // }
-// // }
-// .image {
-//     width: auto;
-//     height: auto;
-//     border-radius: 5px;
-//     width: 240px;
-//     border-radius: 5px;
-    
-   
-//   }
-
-//   .cardFilm__name{
-//     margin-top: 20px;
-//     margin-bottom: 20px;
-
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 20px;
-//     line-height: 1.15;
-//     text-transform: uppercase;
-
-//     color: #000000;
-//   }
-
-//   .cardFilm__text{
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.33;
-
-//     margin-bottom: 8px;
-
-//     color: #8C8C8C;
-//   }
-
-// .cardFilm__vote_average{
-//     width: 17px;
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.17;
-//     margin-left: 41px;
-
-    
-//     align-items: center;
-//     text-align: center;
-//     text-transform: uppercase;
-
-//     color: #FFFFFF;
-
-//     width: 36px;
-
-//     background: #FF6B01;
-//     border-radius: 5px;
-
-//     padding: 1px 9px 1px 10px;
-//     margin-right: 3px;
-// }
-
-  
-//   .cardFilm__vote_count{
-//     width: 28px;
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.17;
-//     text-transform: uppercase;
-    
-//     margin-left: 7px;
-
-//     color: #000000;
-//   }
-
-//   .cardFilm___data{
-//     width: 31px;
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.17;
-
-//     margin-left: 53px;
-//     text-transform: uppercase;
-
-//     color: #000000;
-//   }
-
-//   .title__wrepper{
-//     display: flex;
-//   }
-//   .cardFilm__title_data{
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.33;
-
-//     text-transform: uppercase;
-
-//     align-items: center;
-
-//     margin-left: 50px;;
-
-//     color: #000000;
-//   }
-
-//     .genres{
-//     display: flex;
-// }
-
-//   .cardItem__genreList{
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.33;
-
-
-//     margin-left: 76px;
-//     color: #000000;
-//   }
-
-//   .cardFilm__about{
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.33;
-
-//     margin-top: 12px;
-//     margin-bottom: 8px;
-
-//     color: #000000;
-//   }
-
-//   .cardFilm__description{
-//     font-family: 'Roboto';
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.33;
-
-//     display: flex;
-//     align-items: center;
-
-//     color: #000000;
-//   }
-
-//
-
-//   .cardFilm__button{
-  
-//     font-family: 'Roboto';
-//     font-style: normal;
-  //   font-weight: 500;
-  //   font-size: 12px;
-  //   line-height: 1.33;
-
-  //   background: #FF6B01;
-  //   border-radius: 5px;
-  //   padding: 6px 27px 6px 27px;
-  //   margin-top: 20px;
-  // }
-
-  // #watched{
-  //   margin-right: 20px;
-  // }
