--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -23,7 +23,7 @@
                     class="site-nav__link site-nav__link--main link"
                     href="/src/index.html">Home</a></li>
             <li class="site-nav__item site-nav__item--main"><a class="site-nav__link site-nav__link--main  site-nav__link--current link"
-                    href="/src/library.html">My Library</a></li>
+                    href="/src/library.html">Library</a></li>
         </ul>
     </nav>
     <div class="form-search__icon">
