--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -26,12 +26,9 @@
                     href="/src/library.html">Library</a></li>
         </ul>
     </nav>
-    <div class="form-search__icon">
-        <input type="search" id="name-input" class="form-search__input" placeholder="Movie search">
-
-        <span class="form-search__icon_icon"><svg widht="8px" height="8px" viewBox="0 0 100 100" aria-label="Search">
-                <use class="icon-search" href="/src/images/sprite.svg#icon-search-2"></use>
-            </svg></span>
+    <div class="header-lib__btn-wrap">
+        <button class="header-lib__btn header-lib__btn-watched header-lib__btn--current">Watched</button>
+        <button class="header-lib__btn header-lib__btn-queue">Queue</button>
     </div>
 
 </header>
