Fix Modall ,work library
Зробив бібліотеку та підправив модалку

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,5 +15,6 @@
 @import './components/trailers';
 @import './components/up-btn';
 @import './components/slider';
+@import './components/libnodata';
 
 
