--- a/src/partials/films-library.html
+++ b/src/partials/films-library.html
@@ -1,8 +1,12 @@
 
 <main>
     <div class="gallery-container">
-        <button id="watched">watched</button>
-        <button id="que">que</button>
-        <ul class="gallery" id="libGallery"></ul>
+        <button id="watchedButton">watched</button>
+        <button id="queButton">que</button>
+        <ul class="gallery" id="libGallery">
+            <li class="libnoData__item">
+                <img class="libNoData__img" src="../src/images/library/image.jpg" alt="no data">
+            </li>
+        </ul>
     </div>
 </main>
