--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -1,110 +1,108 @@
-<div class="backdrop is-hidden" data-modal>
-    <div class="modal-window">
-        <!-- <button type="button" class="modal-close-button" data-modal-close>
-            <svg class="modal-close__icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-close"></use>
+<div class="backdrop is-hidden" data-team-modal>
+    <div class="team-modal__window">
+        <div class="team-modal__close-btn">
+            <svg width="18" height="18">
+                <use href="/src/images/sprite.svg#icon-close"></use>
             </svg>
-        </button> -->
-        <h2 class="modal-title">Developers in the dark</h2>
-        <ul class="team-section__list">
-            <li class="team-section__item">
-                <div class="image__ba">
-                    <img class="team-photo" src="./images/Volodymyr_Holotnyk.jpg" alt="" srcset="">
-                </div>
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Volodymyr Holotnyk</h3>
-                    <p class="image-description" lang="en">Team Lead</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+        </div>
+        <h2 class="team-modal__title">Developers in the dark</h2>
+        <ul class="team-modal__list">
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Volodymyr_Holotnyk.jpg" alt="Volodymyr Holotnyk" width="120" height="120"> 
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Volodymyr Holotnyk</h3>
+                    <p class="team-modal__photo-description" lang="en">Team Lead</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Oleksandr_Chernomorets.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Oleksandr Chernomorets</h3>
-                    <p class="image-description" lang="en">Scrum Master</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Oleksandr_Chernomorets.jpg" alt="Oleksandr Chernomorets" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Oleksandr Chernomorets</h3>
+                    <p class="team-modal__photo-description" lang="en">Scrum Master</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Sergii_Bilogolovyi.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Sergii Bilogolovyi</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Sergii_Bilogolovyi.jpg" alt="Sergii Bilogolovyi" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Sergii Bilogolovyi</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Inna_Kukla.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Inna Kukla</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Inna_Kukla.jpg" alt="Inna Kukla" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Inna Kukla</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Viktor_Solomianiy.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Viktor Solomianiy</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Viktor_Solomianiy.jpg" alt="Viktor Solomianiy" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Viktor Solomianiy</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Andrii_Kostenko.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Andrii Kostenko</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Andrii_Kostenko.jpg" alt="Andrii Kostenko" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Andrii Kostenko</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Natalia_Gerasymova.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Natalia Gerasymova</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Natalia_Gerasymova.jpg" alt="Natalia Gerasymova" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Natalia Gerasymova</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Maksim_Kozir.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Maksim Kozir</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Maksim_Kozir.jpg" alt="Maksim Kozir" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Maksim Kozir</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Yuriy_Rysak.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Yuriy Rysak</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Yuriy_Rysak.jpg" alt="Yuriy Rysak" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Yuriy Rysak</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Olya_Rozhniatovska.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Olya Rozhniatovska</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Olya_Rozhniatovska.jpg" alt="Olya Rozhniatovska" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Olya Rozhniatovska</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
-            <li class="team-section__item">
-                <img class="team-photo" src="./images/Ivan_Holovakha.jpg" alt="" srcset="">
-                <div class="team-section__thumb">
-                    <h3 class="image-title">Ivan Holovakha</h3>
-                    <p class="image-description" lang="en">Developer</p>
-                    <a class="social__link" href="https://github.com/IvanHolovakha">GitHub</a>
+            <li class="team-modal__item">
+                <img class="team-modal__photo" src="/src/images/team-photo/Ivan_Holovakha.jpg" alt="Ivan Holovakha" width="130" height="130">
+                <div class="team-modal__thumb">
+                    <h3 class="team-modal__photo-title">Ivan Holovakha</h3>
+                    <p class="team-modal__photo-description" lang="en">Developer</p>
+                    <a class="team-modal__social-link" href="https://github.com/IvanHolovakha">GitHub</a>
                 </div>
             </li>
 
