--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -27,8 +27,8 @@
         </ul>
     </nav>
     <div class="header-lib__btn-wrap">
-        <button class="header-lib__btn header-lib__btn-watched header-lib__btn--current">Watched</button>
-        <button class="header-lib__btn header-lib__btn-queue">Queue</button>
+        <button class="header-lib__btn header-lib__btn-watched header-lib__btn--current" id="watchedButton">Watched</button>
+        <button class="header-lib__btn header-lib__btn-queue" id="queButton">Queue</button>
     </div>
 
 </header>
